[workspace]
resolver = "2"
members = [
    "alpha_sign",
    "yhs-sign",
    "cli"
]
default-members = ["yhs-sign", "cli"]

[workspace.package]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
