[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
include.workspace = true
rust-version.workspace = true
default-run = "cli"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
