[package]
name = "yhs-sign"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.10", features = ["macros"] }
clap = { version = "4.5.2", features = ["derive"] }
dotenv = "0.15.0"
pollster = "0.3.0"
serialport = { version = "4.3.0", default-features = false} 
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = "0.7.10"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
alpha_sign = { path = "../alpha_sign" }
time = "0.3.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
